Python基础知识整理

--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,11 +1,12 @@
 {% if page.meta.comments %}
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <!-- Insert generated snippet here -->
-  <script src="https://giscus.app/client.js"
-        data-repo="Lid23/java-interview-summary"
-        data-repo-id="R_kgDOJr0eBQ"
+
+<script src="https://giscus.app/client.js"
+        data-repo="lid23/python-tool-notes"
+        data-repo-id="R_kgDOJtOEpQ"
         data-category="Q&A"
-        data-category-id="DIC_kwDOJr0eBc4CXAXm"
+        data-category-id="DIC_kwDOJtOEpc4CXFBj"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
